# internship_task

./: README.md  main.py  pyproject.toml
fastapi-app/: main.py  test_connection.py
fastapi-app/alembic/: env.py
fastapi-app/alembic/versions/: 2025_06_12_1246-4f9b9acba318_create_items_table.py  2025_06_12_1339-30f13557d315_create_items_table.py  2025_06_12_1353-022f16464d6f_fix_missing_revision.py  2025_06_12_1357-2d891300d088_fix_missing_revision.py
fastapi-app/app/ai_ollama/: llm_api.py
fastapi-app/app/ai_ollama/crud/: episodes.py
fastapi-app/app/ai_ollama/services/: health_check.py  llm_service.py
fastapi-app/app/api/: api_endpoints.py  items.py
fastapi-app/app/api/crud/: crud.py  items.py
fastapi-app/core/: config.py
fastapi-app/core/models/: __init__.py  base.py  db_helper.py  episode.py  item.py  model_base.py  model_item.py  model_podcast.py  podcast.py  user.py
fastapi-app/core/schemas/: item.py  llm.py  llmSchema.py  podcast.py  podcastSchema.py
fastapi-app/migrations/: env.py
fastapi-app/migrations/versions/: 3c2646b69d74_initial.py  e6870c1b8470_initial.py  e6c6a03af171_create_episodes_table.py
