[project]
name = "internship-task"
version = "0.1.0"
description = "Podcast Episode CRUD (REST API Basics) and LLM Alternative Title/Description Generation (Free API Required)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn[standard]>=0.34.3",
]
