[project]
name = "internship-task"
version = "0.1.0"
description = "Podcast Episode CRUD (REST API Basics) and LLM Alternative Title/Description Generation (Free API Required)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "inflect>=7.5.0",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "ruff>=0.11.13",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn[standard]>=0.34.3",
]
